agregando el nosotros.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Diseñador Freelancer</title>
+    <title>Mariano Bonansea - Diseñador Freelancer</title>
     <link rel="preload" href="css/normalize.css" as="style"> 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap" rel="stylesheet">
@@ -20,8 +20,8 @@
     <!-- Navegacion -->
     <div class="nav-bac">
       <nav class="principal contenedor">
-        <a href="#">Inicio</a>
-        <a href="#">Nosotros</a>
+        <a href="index.html">Inicio</a>
+        <a href="nosotros.html">Nosotros</a>
         <a href="#">Clientes</a>
         <a href="#">Contactos</a>
       </nav>
