--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="nav-bac">
       <nav class="principal contenedor">
         <a href="index.html">Inicio</a>
-        <a href="nosotros.html">Nosotros</a>
+        <a href="nosotros.html">Hacerca de mi</a>
         <a href="#">Clientes</a>
         <a href="#">Contactos</a>
       </nav>
