--- a/nosotros.html
+++ b/nosotros.html
@@ -65,8 +65,8 @@
                 Bonansea Camaño, Mariano Nicolas, 24 años. <br>
                 Estudiante de Licenciatura en informatica de la 
                 Universidad Nacional de la Patagonia San Juan Bosco, 
-                sede Puerto Madryn.<br>
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-git" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                sede Puerto Madryn.</p>
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-git" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                   <path d="M16 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
                   <path d="M12 8m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
@@ -78,7 +78,7 @@
                 </svg>
                 <a href="https://github.com/BonanseaMariano" target="_blank">Github</a>
                 <br>
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-linkedin" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-linkedin" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                   <path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" />
                   <path d="M8 11l0 5" />
@@ -87,7 +87,6 @@
                   <path d="M16 16v-3a2 2 0 0 0 -4 0" />
                 </svg>
                 <a href="https://www.linkedin.com/in/mariano-nicol%C3%A1s-bonansea-cama%C3%B1o-1b4346244/" target="_blank">Linkedin</a>
-              </p>
             </section>
         </div>
 
