--- a/nosotros.html
+++ b/nosotros.html
@@ -58,7 +58,7 @@
 
 <!-- Servicios -->
     <main class="contenedor sombra">
-      <h2>Hacerca de mi</h2>
+      <h2>Acerca de mi</h2>
         <div>
             <section class="mensaje">
               <p>
