--- a/nosotros.html
+++ b/nosotros.html
@@ -21,7 +21,7 @@
     <div class="nav-bac">
       <nav class="principal contenedor">
         <a href="index.html">Inicio</a>
-        <a href="nosotros.html">Acerca de mi</a>
+        <a href="nosotros.html">Hacerca de mi</a>
         <a href="#">Clientes</a>
         <a href="#">Contactos</a>
       </nav>
@@ -58,7 +58,7 @@
 
 <!-- Servicios -->
     <main class="contenedor sombra">
-      <h2>Acerca de mi</h2>
+      <h2>Hacerca de mi</h2>
         <div>
             <section class="mensaje">
               <p>
