personalizando acerca de mi y comentarios

--- a/nosotros.html
+++ b/nosotros.html
@@ -21,7 +21,7 @@
     <div class="nav-bac">
       <nav class="principal contenedor">
         <a href="index.html">Inicio</a>
-        <a href="nosotros.html">Hacerca de mi</a>
+        <a href="nosotros.html">Acerca de mi</a>
         <a href="#">Clientes</a>
         <a href="#">Contactos</a>
       </nav>
@@ -58,39 +58,46 @@
 
 <!-- Servicios -->
     <main class="contenedor sombra">
-      <h2>Hacerca de mi</h2>
-        <div>
-            <section class="mensaje">
+      <h2>Acerca de mi</h2>
+            <section class="mensaje flex">
+              <div class="contenedor-yo">
+                <img src="img/Yo.jpg" alt="Foto de perfil">
+              </div>
               <p>
                 Bonansea Camaño, Mariano Nicolas, 24 años. <br>
                 Estudiante de Licenciatura en informatica de la 
                 Universidad Nacional de la Patagonia San Juan Bosco, 
-                sede Puerto Madryn.</p>
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-git" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                  <path d="M16 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                  <path d="M12 8m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                  <path d="M12 16m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                  <path d="M12 15v-6" />
-                  <path d="M15 11l-2 -2" />
-                  <path d="M11 7l-1.9 -1.9" />
-                  <path d="M13.446 2.6l7.955 7.954a2.045 2.045 0 0 1 0 2.892l-7.955 7.955a2.045 2.045 0 0 1 -2.892 0l-7.955 -7.955a2.045 2.045 0 0 1 0 -2.892l7.955 -7.955a2.045 2.045 0 0 1 2.892 0z" />
-                </svg>
-                <a href="https://github.com/BonanseaMariano" target="_blank">Github</a>
-                <br>
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-linkedin" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                  <path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" />
-                  <path d="M8 11l0 5" />
-                  <path d="M8 8l0 .01" />
-                  <path d="M12 16l0 -5" />
-                  <path d="M16 16v-3a2 2 0 0 0 -4 0" />
-                </svg>
-                <a href="https://www.linkedin.com/in/mariano-nicol%C3%A1s-bonansea-cama%C3%B1o-1b4346244/" target="_blank">Linkedin</a>
+                sede Puerto Madryn.
+              </p>
             </section>
-        </div>
 
-      <section>
+            <section class="enlaces flex">
+              <div class="flex">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-git" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <path d="M16 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+                <path d="M12 8m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+                <path d="M12 16m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+                <path d="M12 15v-6" />
+                <path d="M15 11l-2 -2" />
+                <path d="M11 7l-1.9 -1.9" />
+                <path d="M13.446 2.6l7.955 7.954a2.045 2.045 0 0 1 0 2.892l-7.955 7.955a2.045 2.045 0 0 1 -2.892 0l-7.955 -7.955a2.045 2.045 0 0 1 0 -2.892l7.955 -7.955a2.045 2.045 0 0 1 2.892 0z" />
+              </svg>
+              <a href="https://github.com/BonanseaMariano" target="_blank">Github</a>
+            </div>
+            <div class="flex">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-linkedin" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" />
+                <path d="M8 11l0 5" />
+                <path d="M8 8l0 .01" />
+                <path d="M12 16l0 -5" />
+                <path d="M16 16v-3a2 2 0 0 0 -4 0" />
+              </svg>
+              <a href="https://www.linkedin.com/in/mariano-nicol%C3%A1s-bonansea-cama%C3%B1o-1b4346244/" target="_blank">Linkedin</a>
+            </div>
+            </section>
+
         <h2>Contacto</h2>
         <form class="formulario">
           <fieldset>
